<resources>
    <string name="app_name">迈瑞铂</string>
    <string name="default_string">捷荣</string>
    <string name="title_activity_login">登录</string>
    <string name="copy_right">Copyright © 2018 东莞捷荣技术股份有限公司</string>

    <!-- Strings related to login -->
    <string name="prompt_email">请输入账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!--button 默认文字-->
    <string name="default_button">默认文字</string>
    <string name="fast_button_title">一键启动</string>
    <string name="select_button_title">选择处方</string>

    <!--textView 默认文字-->
    <string name="default_title">默认title</string>
    <string name="default_desc">默认描述</string>
    <string name="default_cure_recipe">暂无方案</string>
    <string name="default_cure_fast_desc">\"一键启动\"将自动启用上次使用的方案</string>
    <string name="default_cure_count_down_desc">剩余时间</string>
    <string name="default_cure_count_down">19:59</string>
    <string name="default_device_power">电池电量</string>
    <string name="default_device_link">设备连接正常</string>
    <string name="default_device_link_status">正常</string>
    <string name="default_intensity_desc">强度</string>
    <string name="default_intensity_num">0</string>
    <string name="default_clock_desc">剩余时间</string>
    <string name="default_clock_num">00:00</string>
    <string name="default_resume_desc">播放</string>
    <string name="default_stop_desc">暂停</string>
    <string name="default_more">查看更多</string>

    <!--底部栏-->
    <string name="item_recipe">首页</string>
    <string name="item_cure">按摩</string>
    <string name="item_mall">发现</string>
    <string name="item_mine">我的</string>

    <!--绑定-->
    <string name="un_bind">解绑</string>
    <string name="bind">绑定</string>

    <!--设备准备页面-->
    <string name="prepare_button">开始按摩</string>

    <!--activity 的label-->
    <string name="prepare_title">电极贴合</string>
    <string name="bind_title">设备绑定</string>
    <string name="search_title">设备搜索</string>
    <string name="main_title">主页</string>
    <string name="ot_prepare_title">设备初始化</string>

    <!--button的描述-->
    <string name="button_cancel_text">取消</string>
    <string name="button_sure_text">确定</string>
    <string name="button_exit_text">退出</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_sms">验证码</string>
    <string name="log_out">退出登录</string>

    <string name="register_phone">请输入手机号</string>
    <string name="next_step">下一步</string>
    <string name="has_account">已有账号-登录</string>
    <string name="sms_code">输入验证码</string>
    <string name="sms_regain_code">重新获取验证码</string>
    <string name="title_activity_cwregister">注册</string>
    <string name="action_settings">Settings</string>
    <string name="empty_text">暂时没有理疗设备工作</string>
    <string name="input_password">输入密码</string>
    <string name="password_tips">密码格式为6-16位数字或字母,不允许有空格和符号</string>
    <string name="prepare_header_desc">每日或隔日1~2次,一个疗程为10-20天</string>
    <string name="re_search">重新搜索</string>
    <string name="start_cure">开始按摩</string>

    <string name="do_not_again">不再提示</string>
    <string name="hint">1.身体内有植入电子装置(如:心脏起搏器)或治疗部位有金属异物者,若没有医生医嘱请勿使用本产品;\n2.靠近胸部使用电极会增加心脏纤颤的危险,禁止将电极片一前一后贴在心脏部位使用;\n3.孕妇、产妇、女性生理期,避免在腹部使用;\n4.对电流不能耐受者禁止使用;\n5.术后未愈合的伤口处禁止使用;\n6.患有严重高血压、心脏病、脑神经异常的患者禁止使用;\n7.急性化脓炎症禁止使用;</string>
    <string name="hint_title">禁忌事项</string>

    <string name="bind_empty_desc">没有绑定设备</string>
    <string name="bind_empty_button">去绑定设备</string>
    <string name="no_data">没有数据</string>
    <string name="re_fetch_data">重新加载数据</string>

    <string name="app_update">立刻升级</string>
    <string name="shared_activity">分享软件</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about">关于我们</string>

</resources>
