<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.register.RegisterFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_phone_bg"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/registerPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_phone"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="156dp"
        android:layout_height="36dp"
        android:text="@string/next_step"
        android:id="@+id/registerNextStep"
        app:layout_constraintTop_toBottomOf="@id/register_phone_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/prepare_button_bg"
        android:textColor="@color/white"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/has_account"
        app:layout_constraintTop_toBottomOf="@id/registerNextStep"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/registerHasAccount"
        />

</android.support.constraint.ConstraintLayout>