<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.register.CWPasswordFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/mPassword_bg"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/mPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_password"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:maxLines="1"
            android:singleLine="true"
            android:gravity="center"
            android:inputType="textPassword"
            />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_tips"
        app:layout_constraintTop_toBottomOf="@id/mPassword_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="@dimen/sp_12"
        android:id="@+id/mPasswordTips"
        />

    <Button
        android:layout_width="156dp"
        android:layout_height="@dimen/dp_40"
        android:background="@drawable/prepare_button_bg"
        android:textColor="@color/white"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@id/mPasswordTips"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/dp_12"
        android:id="@+id/mRegister"
        />
</android.support.constraint.ConstraintLayout>