<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recipe_constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/recipe_item_img"
        android:src="@drawable/ic_launcher_background"
        android:contentDescription="@string/app_name"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recipe_item_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/recipe_item_img"
        android:text="@string/default_title"
        />
    <TextView
        android:id="@+id/recipe_item_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/recipe_item_title"
        app:layout_constraintLeft_toRightOf="@id/recipe_item_img"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/default_desc"
        />

</android.support.constraint.ConstraintLayout>