<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_hint_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/hint_title"
        android:textSize="@dimen/sp_20"
        android:id="@+id/mHintTitle"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dp_12"
        android:textColor="@color/theme_ignore_gray"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mHintTitle"
        android:id="@+id/mHint"
        android:text="@string/hint"
        android:layout_marginTop="@dimen/dp_12"
        android:paddingStart="@dimen/dp_8"
        android:paddingEnd="@dimen/dp_8"
        android:textColor="@color/theme_ignore_gray"
        android:lineSpacingExtra="@dimen/dp_8"
        />
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mHint"
        android:text="@string/do_not_again"
        android:id="@+id/mRadio"
        android:layout_marginTop="@dimen/dp_12"
        android:textColor="@color/theme_ignore_gray"
        />
    <Button
        android:layout_width="@dimen/dp_156"
        android:layout_height="@dimen/dp_36"
        android:background="@drawable/exit_btn_bg"
        android:text="@string/button_sure_text"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mRadio"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/mButton"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginBottom="@dimen/dp_12"
        />

</android.support.constraint.ConstraintLayout>