<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chitwing.anycure_kotlin_master.activity.bind.BindActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/bind_recyclerView"
        android:background="@color/high_gray"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v7.widget.RecyclerView>

    <ImageButton
        android:id="@+id/bind_add_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/add_device"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="44dp"
        android:contentDescription="@string/un_bind"
        android:background="@null"
        />
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mEmptyView"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/bind_empty_desc"
            android:id="@+id/mEmptyTextView"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/no_data_topic"
            android:contentDescription="@string/app_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/mEmptyTextView"
            />
        <Button
            android:layout_width="@dimen/dp_156"
            android:layout_height="@dimen/dp_36"
            android:text="@string/bind_empty_button"
            android:background="@drawable/exit_btn_bg"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/mEmptyTextView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/dp_8"
            android:id="@+id/mEmptyButton"
            />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
