<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context="com.example.chitwing.anycure_kotlin_master.fragment.otCure.OtCureFragment">

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="72dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/ot_cure_recycler_view"
        android:layout_marginTop="1dp"
        android:background="@color/main"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/button_sure_text"
        app:layout_constraintTop_toBottomOf="@id/ot_cure_recycler_view"
        android:id="@+id/ot_cure_icon"
        android:src="@mipmap/shoulders"
        android:scaleType="matrix"
        />
    <View
        android:layout_width="1dp"
        android:layout_height="92dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ot_cure_icon"
        android:background="@color/main"
        android:id="@+id/ot_cure_v_line"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/ot_cure_v_line"
        android:background="@color/main"
        android:id="@+id/ot_cure_mid_line"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/ot_cure_v_line"
        app:layout_constraintTop_toBottomOf="@id/ot_cure_icon"
        app:layout_constraintBottom_toTopOf="@id/ot_cure_mid_line"
        android:text="@string/default_device_link_status"
        android:textSize="@dimen/text_size_big"
        android:layout_marginBottom="28dp"
        android:id="@+id/ot_cure_link_status"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/ot_cure_mid_line"
        app:layout_constraintTop_toBottomOf="@id/ot_cure_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/ot_cure_v_line"
        android:layout_marginTop="28dp"
        android:text="@string/default_device_link"
        android:id="@+id/ot_cure_link_desc"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_device_power"
        app:layout_constraintLeft_toRightOf="@id/ot_cure_v_line"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/ot_cure_link_desc"
        app:layout_constraintBottom_toBottomOf="@id/ot_cure_link_desc"
        android:id="@+id/ot_cure_power_desc"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/default_device_power"
        app:layout_constraintTop_toTopOf="@id/ot_cure_link_status"
        app:layout_constraintBottom_toBottomOf="@id/ot_cure_link_status"
        app:layout_constraintLeft_toRightOf="@id/ot_cure_v_line"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@mipmap/power_lev_5"
        android:id="@+id/ot_cure_power_icon"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/default_device_power"
        app:layout_constraintTop_toBottomOf="@id/ot_cure_mid_line"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@mipmap/ot_intensity"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:id="@+id/ot_cure_intensity_icon"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/ot_cure_intensity_icon"
        app:layout_constraintBottom_toBottomOf="@id/ot_cure_intensity_icon"
        app:layout_constraintLeft_toRightOf="@id/ot_cure_intensity_icon"
        android:text="@string/default_intensity_desc"
        android:layout_marginStart="12dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/ot_cure_minus_button"
        app:layout_constraintBottom_toBottomOf="@id/ot_cure_minus_button"
        android:text="@string/default_intensity_num"
        android:textSize="@dimen/intensity_size"
        android:id="@+id/ot_cure_intensity_num"
        android:textColor="@color/main"
        />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/default_title"
        android:src="@mipmap/ot_minus"
        android:background="@null"
        android:id="@+id/ot_cure_minus_button"
        app:layout_constraintTop_toBottomOf="@id/ot_cure_intensity_icon"
        app:layout_constraintRight_toLeftOf="@id/ot_cure_intensity_num"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/default_title"
        android:src="@mipmap/ot_add"
        app:layout_constraintLeft_toRightOf="@id/ot_cure_intensity_num"
        app:layout_constraintTop_toTopOf="@id/ot_cure_minus_button"
        app:layout_constraintBottom_toBottomOf="@id/ot_cure_minus_button"
        android:layout_marginStart="40dp"
        android:id="@+id/ot_cure_add_button"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/main"
        app:layout_constraintTop_toBottomOf="@id/ot_cure_minus_button"
        android:layout_marginTop="20dp"
        android:id="@+id/ot_cure_bottom_line"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/default_title"
        app:layout_constraintTop_toBottomOf="@id/ot_cure_bottom_line"
        android:src="@mipmap/ot_clock"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/ot_cure_clock_icon"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/ot_cure_clock_icon"
        app:layout_constraintBottom_toBottomOf="@id/ot_cure_clock_icon"
        app:layout_constraintLeft_toRightOf="@id/ot_cure_clock_icon"
        android:layout_marginStart="12dp"
        android:text="@string/default_clock_desc"
        />

    <Button
        android:id="@+id/ot_cure_resume_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/default_resume_desc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/ot_cure_exit_button"
        app:layout_constraintTop_toBottomOf="@id/ot_cure_clock_icon"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:drawableStart="@mipmap/ot_resume"
        android:textAlignment="center"
        android:background="@drawable/resume_btn_bg"
        android:textColor="@color/main"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        />

    <Button
        android:id="@+id/ot_cure_exit_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_sure_text"
        app:layout_constraintBottom_toBottomOf="@id/ot_cure_resume_button"
        app:layout_constraintLeft_toRightOf="@id/ot_cure_resume_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/ot_cure_resume_button"
        android:layout_marginEnd="20dp"
        android:background="@drawable/exit_btn_bg"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/ot_cure_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_clock_num"
        app:layout_constraintLeft_toLeftOf="@id/ot_cure_exit_button"
        app:layout_constraintRight_toRightOf="@id/ot_cure_exit_button"
        app:layout_constraintTop_toTopOf="@id/ot_cure_clock_icon"
        app:layout_constraintBottom_toBottomOf="@id/ot_cure_clock_icon"
        />



</android.support.constraint.ConstraintLayout>
