<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.register.SMSFragment">

    <TextView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sms_code"
        android:id="@+id/smsStatus"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/smsNum_bg"
        app:layout_constraintTop_toBottomOf="@id/smsStatus"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/smsNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sms_code"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"
            android:gravity="center"
            />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sms_code"
        android:id="@+id/smsCountdown"
        app:layout_constraintTop_toBottomOf="@id/smsNum_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <Button
        android:layout_width="158dp"
        android:layout_height="40dp"
        android:background="@drawable/prepare_button_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/smsCountdown"
        android:text="@string/sms_regain_code"
        android:textColor="@color/white"
        android:id="@+id/smsRegain"
        />

</android.support.constraint.ConstraintLayout>